<resources>
    <string name="app_name">orz</string>
    <string name="tab_text_1">ASSIGNMENT</string>
    <string name="tab_text_2">CALENDAR</string>
    <string name="tab_text_3">SETTINGS</string>
    <string name="action_settings">Settings</string>
    <string name="section_format">Hello World from section: %1$d</string>
    <string name="id_hint">ID</string>
    <string name="password_hint">Password</string>
    <string name="verify_password">Verify your password</string>
    <string name="email_hint">Email</string>
    <string name="sign_in">Sign In</string>
    <string name="register_account">Register a new account</string>
    <string name="register">Register</string>
    <string name="check_lecturer">I am a teaching staff</string>
    <string name="label_register_account">Register an orz account</string>
    <string name="label_my_courses">My Courses</string>
    <string name="label_open_courses">Open Courses</string>
    <string name="update">Update</string>
    <string name="label_update_account">Update an orz account</string>

    <string name="settings_account">Account</string>
    <string name="settings_notification">Notification</string>
    <string name="settings_myCourses">My Courses</string>

    <string name="notification_settings_personal_schedule">Personal Schedule</string>
    <string name="notification_settings_time_for_assignment">Time for Assignment</string>
    <string name="notification_settings_assignment_due">Assignment Due</string>

    <!-- Time labels for calendar view. -->
    <string name="time_0am">0 AM</string>
    <string name="time_1am">1 AM</string>
    <string name="time_2am">2 AM</string>
    <string name="time_3am">3 AM</string>
    <string name="time_4am">4 AM</string>
    <string name="time_5am">5 AM</string>
    <string name="time_6am">6 AM</string>
    <string name="time_7am">7 AM</string>
    <string name="time_8am">8 AM</string>
    <string name="time_9am">9 AM</string>
    <string name="time_10am">10 AM</string>
    <string name="time_11am">11 AM</string>
    <string name="time_12pm">12 PM</string>
    <string name="time_1pm">1 PM</string>
    <string name="time_2pm">2 PM</string>
    <string name="time_3pm">3 PM</string>
    <string name="time_4pm">4 PM</string>
    <string name="time_5pm">5 PM</string>
    <string name="time_6pm">6 PM</string>
    <string name="time_7pm">7 PM</string>
    <string name="time_8pm">8 PM</string>
    <string name="time_9pm">9 PM</string>
    <string name="time_10pm">10 PM</string>
    <string name="time_11pm">11 PM</string>
    <string name="time_12am">12 AM</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_settings">Settings</string>

    <!-- Strings related to Settings -->

    <!-- Example General settings -->
    <string name="pref_header_general">General</string>

    <string name="pref_title_social_recommendations">Enable social recommendations</string>
    <string name="pref_description_social_recommendations">Recommendations for people to contact
        based on your message history
    </string>

    <string name="pref_title_display_name">Display name</string>
    <string name="pref_default_display_name">John Smith</string>

    <string name="pref_title_add_friends_to_messages">Add friends to messages</string>
    <string-array name="pref_example_list_titles">
        <item>Always</item>
        <item>When possible</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_example_list_values">
        <item>1</item>
        <item>0</item>
        <item>-1</item>
    </string-array>

    <!-- Example settings for Data & Sync -->
    <string name="pref_header_data_sync">Data &amp; sync</string>

    <string name="pref_title_sync_frequency">Sync frequency</string>
    <string-array name="pref_sync_frequency_titles">
        <item>15 minutes</item>
        <item>30 minutes</item>
        <item>1 hour</item>
        <item>3 hours</item>
        <item>6 hours</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_sync_frequency_values">
        <item>15</item>
        <item>30</item>
        <item>60</item>
        <item>180</item>
        <item>360</item>
        <item>-1</item>
    </string-array>

    <string-array name="list_preference_entries">
        <item>Entry 1</item>
        <item>Entry 2</item>
        <item>Entry 3</item>
    </string-array>

    <string-array name="list_preference_entry_values">
        <item>1</item>
        <item>2</item>
        <item>3</item>
    </string-array>

    <string-array name="multi_select_list_preference_default_value" />

    <string name="pref_title_system_sync_settings">System sync settings</string>

    <!-- Example settings for Notifications -->
    <string name="pref_header_notifications">Notifications</string>

    <string name="pref_title_new_message_notifications">New message notifications</string>

    <string name="pref_title_ringtone">Ringtone</string>
    <string name="pref_ringtone_silent">Silent</string>

    <string name="pref_title_vibrate">Vibrate</string>
</resources>
